--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@
   <p>Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful</p>
     <div class="box-grid">
-        <div class="box-1">
+        <div class="box-sup">
           <h2>Supervisor</h2>
           <p>Monitors activity to identify project roadblocks</p>
+          <img class="icon" src="images/icon-supervisor.svg" alt="sup">
         </div>  
-        <div class="box-2">
+        <div class="box-team">
           <h2>Team Builder</h2>
           <p>Scans our talent network to create the optimal team for your project</p>
+          <img class="icon" src="images/icon-team-builder.svg" alt="team">
         </div>
-        <div class="box-3">
+        <div class="box-karma">
           <h2>Karma</h2>
           <p>Regularly evaluates our talent to ensure quality</p>
+          <img class="icon" src="images/icon-karma.svg" alt="karma">
         </div>
-        <div class="box-4">
+        <div class="box-calc">
           <h2>Calculator</h2>
           <p>Uses data from past projects to provide better delivery estimates</p>
+          <img class="icon" src="images/icon-calculator.svg" alt="calc">
         </div>
     </div>
   </div>
